--- a/style.css
+++ b/style.css
@@ -4,8 +4,35 @@ body {
   font-size: 16px;
   font-family: "Mulish", sans-serif;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   max-width: 1320px;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
+}
+
+
+.heading {
+  font-size: 24px;
+
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  flex-wrap: wrap;
+  margin-top: 24px;
+}
+
+.card {
+  width: 25%;
+  padding: 25px;
+  border-radius: 8px;
+  border: 1px #333 solid;
 }
